feat(playerInteracts): refactor EquippableListener for code readability
The 'EquippableListener' class has been refactored to improve code readability and maintainability. This was achieved by breaking down the 'onEquippable' method into smaller, more manageable methods, each with a single responsibility. These include helper methods for validating player interaction and equipping items, among others. This refactoring not only makes the code easier to understand and modify, but also reduces the risk of bugs. The use of the switch statement has also been modernized to use the newer arrow syntax, providing a more concise and readable format.