@@ -13,77 +13,78 @@ import zone.vao.nexoAddon.NexoAddon;
 import zone.vao.nexoAddon.classes.Components;
 import zone.vao.nexoAddon.utils.InventoryUtil;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class EquippableListener {
 
-  public static void onEquippable(final PlayerInteractEvent event){
+  public static void onEquippable(final PlayerInteractEvent event) {
     Player player = event.getPlayer();
-    if(NexoBlocks.isCustomBlock(event.getClickedBlock())
-        && getAllHelmets().contains(player.getInventory().getItemInMainHand().getType())
-        && NexoItems.idFromItem(player.getInventory().getHelmet()) != null
-    ) {
-      return;
-    }
-    if (event.getHand() != EquipmentSlot.HAND) {
-      return;
-    }
 
-    if (event.getAction() != Action.RIGHT_CLICK_AIR && event.getAction() != Action.RIGHT_CLICK_BLOCK) {
-      return;
-    }
+    if (!isValidInteraction(event, player)) return;
 
     String itemId = NexoItems.idFromItem(player.getInventory().getItemInMainHand());
-    if (itemId == null)
-      return;
-    if (!NexoAddon.getInstance().isComponentSupport())
-      return;
+    if (itemId == null || !NexoAddon.getInstance().isComponentSupport()) return;
 
     Components componentItem = NexoAddon.getInstance().getComponents().get(itemId);
-    if (componentItem == null || componentItem.getEquippable() == null)
-      return;
+    if (componentItem == null || componentItem.getEquippable() == null) return;
 
+    equipItem(event, player, componentItem);
+  }
+
+  private static boolean isValidInteraction(PlayerInteractEvent event, Player player) {
+    return event.getHand() == EquipmentSlot.HAND
+        && (event.getAction() == Action.RIGHT_CLICK_AIR || event.getAction() == Action.RIGHT_CLICK_BLOCK)
+        && (!NexoBlocks.isCustomBlock(event.getClickedBlock())
+        || !isWearingCustomHelmet(player));
+  }
+
+  private static boolean isWearingCustomHelmet(Player player) {
+    ItemStack helmet = player.getInventory().getHelmet();
+    return helmet != null
+        && NexoItems.idFromItem(helmet) != null
+        && getAllHelmets().contains(player.getInventory().getItemInMainHand().getType());
+  }
+
+  private static void equipItem(PlayerInteractEvent event, Player player, Components componentItem) {
     event.setCancelled(true);
 
-    ItemStack item = player.getInventory().getItemInMainHand().clone();
-    item.setAmount(1);
+    ItemStack itemToEquip = player.getInventory().getItemInMainHand().clone();
+    itemToEquip.setAmount(1);
     InventoryUtil.removePartialStack(player, 1);
 
-    ItemStack helmet = player.getInventory().getHelmet();
-    if (helmet != null && helmet.getType() != Material.AIR) {
-      helmet = helmet.clone();
-    }
+    ItemStack existingHelmet = cloneHelmet(player.getInventory().getHelmet());
 
+    equipToSlot(player, componentItem, itemToEquip);
+
+    returnHelmetToInventory(player, existingHelmet);
+  }
+
+  private static ItemStack cloneHelmet(ItemStack helmet) {
+    return (helmet != null && helmet.getType() != Material.AIR) ? helmet.clone() : null;
+  }
+
+  private static void equipToSlot(Player player, Components componentItem, ItemStack itemToEquip) {
     switch (componentItem.getEquippable().getSlot()) {
-      case "CHESTPLATE":
-        player.getInventory().setChestplate(item);
-        break;
-      case "LEGGINGS":
-        player.getInventory().setLeggings(item);
-        break;
-      case "BOOTS":
-        player.getInventory().setBoots(item);
-        break;
-      default:
-        player.getInventory().setHelmet(item);
-        break;
+      case "CHESTPLATE" -> player.getInventory().setChestplate(itemToEquip);
+      case "LEGGINGS" -> player.getInventory().setLeggings(itemToEquip);
+      case "BOOTS" -> player.getInventory().setBoots(itemToEquip);
+      default -> player.getInventory().setHelmet(itemToEquip);
     }
+  }
 
-    ItemStack finalHelmet = helmet;
-    new BukkitRunnable(){
-
-      @Override
-      public void run() {
-        if (finalHelmet != null) {
-          player.getInventory().addItem(finalHelmet);
+  private static void returnHelmetToInventory(Player player, ItemStack existingHelmet) {
+    if (existingHelmet != null) {
+      new BukkitRunnable() {
+        @Override
+        public void run() {
+          player.getInventory().addItem(existingHelmet);
         }
-      }
-    }.runTaskLater(NexoAddon.getInstance(), 2);
+      }.runTaskLater(NexoAddon.getInstance(), 2);
+    }
   }
 
   private static List<Material> getAllHelmets() {
-    return Arrays.asList(
+    return List.of(
         Material.LEATHER_HELMET,
         Material.CHAINMAIL_HELMET,
         Material.IRON_HELMET,
